@@ -6,15 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>420</width>
-    <height>282</height>
+    <width>490</width>
+    <height>362</height>
    </rect>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>420</width>
-    <height>282</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -54,12 +48,12 @@
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Expanding</enum>
+      <enum>QSizePolicy::Maximum</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>60</height>
+       <height>50</height>
       </size>
      </property>
     </spacer>
@@ -92,6 +86,12 @@
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::No|QDialogButtonBox::Yes</set>
      </property>
