@@ -1,5 +1,6 @@
 0.2.0
   BugFix in parser code.
+  Now Transaction dialog saves its size between calls.
 
 0.1.0 
   Initial Proof of Concept release.
